# anomaly-detection-of-power-generation

./: .$system.drawio.bkp  .$system.png.bkp  Density_thermo_and_nonthermo_modelling.ipynb  Gen_bear_temp_uncertainty.ipynb  Hybrid_model.ipynb  PIML.ipynb  Preprocessing_export_csv.ipynb  README.md  calculations.py  dataloader.py  import numpy as np.py  main.py  modeling1.ipynb  naasfaf.py  plots.ipynb  processed_dataset.xlsx  pyproject.toml  system.drawio  system1.drawio  test_with_csv.ipynb  testing.ipynb  uncertanty.ipynb  xgb_model_full.pkl
data/raw/: Historical-Failure-Logbook-2016.xlsx  opendata-wind-failures-2017.xlsx  ~$opendata-wind-failures-2017.xlsx
